--- a/library-management-system/src/main/resources/fxml/LoanView.fxml
+++ b/library-management-system/src/main/resources/fxml/LoanView.fxml
@@ -24,7 +24,7 @@
                 </Tab>
                 <Tab text="Return Loans">
                     <content>
-                        <VBox spacing="20" padding="$x1">
+                        <VBox spacing="20">
                             <padding>
                                 <Insets top="20" right="20" bottom="20" left="20"/>
                             </padding>
